--- a/.github/workflows/AutoAttendance.yml
+++ b/.github/workflows/AutoAttendance.yml
@@ -20,5 +20,5 @@ jobs:
       run: cargo build --release
     - name: Auto Attendance
       run: |
-        cargo run --release -- -u "${{ secrets.USERNAME }}" -p "${{ secrets.PASSWORD }}"
+        cargo run --release -- -u "${{ secrets.USERNAME }}" "${{ secrets.PASSWORD }}"
       continue-on-error: true
