--- a/.github/workflows/AutoAttendance.yml
+++ b/.github/workflows/AutoAttendance.yml
@@ -1,10 +1,9 @@
 name: AutoAttendance
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  schedule:
+    - cron: '0 16 * * *'
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
